--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "fitness-app",
-  "version": "1.0.0",
-  "description": "Final Lab Fitness App",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "axios": "^1.6.2",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
+  "name": "fitness-app",
+  "version": "1.0.0",
+  "description": "Final Lab Fitness App",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
     "express-sanitizer": "^1.0.6",
-    "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
     "mysql2": "^3.6.0"
-  }
+  }
 }
